# website-language-detector

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
src/website_language_detector/: cli.py  detector.py
